# binocular-dense-stereo-cpp

./: .gitignore  CMakeLists.txt  a  snippet.cpp  test.cpp
config/: config.cfg
src/: binocular_dense_stereo.cpp  includes.h  iterative_registration.cpp  test_middlebury.cpp
src/config/: config.cpp  config.h  config.hpp
src/dataset/: dataset.cpp  dataset.hpp  kitti_dataset.cpp  kitti_dataset.h  msm_middlebury.cpp  msm_middlebury.hpp  tsukuba_dataset.cpp  tsukuba_dataset.h  util.cpp  util.hpp
src/graph_cuts/: kz2.cpp
src/graph_cuts/energy/: energy.h
src/logger/: log.h
src/matching_reproject/: stereo_matching.cpp  stereo_matching.hpp
src/registration/: PointCloud.cpp  PointCloud.h  PointCloudPairRegistration.cpp  PointCloudPairRegistration.h  constants.h  includes.h  registerPointCloudsApp.cpp  registerPointCloudsApp.h  registration.cpp  registration.hpp
src/stereo_viewer/: viewer.cpp  viewer.hpp
src/types/: custom_types.hpp
src/utils/: util.cpp  util.hpp
test_blockmatchers/: Threshold.cpp  grabcut.cpp  stereoBM  stereoBM.cpp  stereoSGBM  stereoSGBM.cpp  watershed.cpp
